tests/sksl/errors/VoidInStruct.glsl
### Compilation failed:

error: 5: type 'void' may not be used in an array
    void b[2];
    ^^^^^^^^^
error: 6: type 'void' may not be used in an array
    void[2] c;
    ^^^^^^^
error: 7: type 'void' may not be used in an array
    void[2] d[2];
    ^^^^^^^
error: 4: type 'void' is not permitted in a struct
    void a;
    ^^^^^^
4 errors
